# agents

./: .env.example  LICENSE  README.md  pyproject.toml
agents/: cases.yaml  cv_classifier_agent.py  example_agent.py  interview_prep_agent.py  interview_simulation.py  run_evaluation.py
user_stories/: 2_n8n.md  evals.md  multi_agent.md
